--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -1,229 +1,107 @@
-/* reset */
-page {
-  background-color: #F8F8F8;
-  height: 100%;
-  font-size: 32rpx;
-  line-height: 1.6;
-}
-checkbox, radio{
-  margin-right: 10rpx;
-}
-button{
-  margin-top: 20rpx;
-  margin-bottom: 20rpx;
-}
-form{
-  width: 100%;
-}
-input {
-  width: 100%;
+@import "colorui/main.wxss";
+@import "colorui/icon.wxss";
+
+.scrollPage {
+  height: 100vh;
 }
 
-/* lib */
-.strong{
-  font-weight: bold;
-}
-.tc{
-  text-align: center;
-}
-
-/* page */
-.container {
+.nav-list {
   display: flex;
-  flex-direction: column;
-  min-height: 100%;
+  flex-wrap: wrap;
+  padding: 0px 40rpx 0px;
   justify-content: space-between;
-  font-size: 32rpx;
-  font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
-}
-.page-head{
-  padding: 60rpx 50rpx 80rpx;
-  text-align: center;
-}
-.page-head-title{
-  display: inline-block;
-  padding: 0 40rpx 20rpx 40rpx;
-  font-size: 32rpx;
-  color: #BEBEBE;
-}
-.page-head-line{
-  margin: 0 auto;
-  width: 150rpx;
-  height: 2rpx;
-  background-color: #D8D8D8;
-}
-.page-head-desc{
-  padding-top: 20rpx;
-  color: #9B9B9B;
-  font-size: 32rpx;
 }
 
-.page-body {
+.nav-li {
+  padding: 30rpx;
+  border-radius: 12rpx;
+  width: 45%;
+  margin: 0 2.5% 40rpx;
+  background-image: url(https://image.weilanwl.com/color2.0/cardBg.png);
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  z-index: 1;
+}
+
+.nav-li::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background-color: inherit;
   width: 100%;
-  flex-grow: 1;
-  overflow-x: hidden;
+  height: 100%;
+  left: 0;
+  bottom: -10%;
+  border-radius: 10rpx;
+  opacity: 0.2;
+  transform: scale(0.9, 0.9);
 }
-.page-body-wrapper {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
+
+.nav-li.cur {
+  color: #fff;
+  background: rgb(94, 185, 94);
+  box-shadow: 4rpx 4rpx 6rpx rgba(94, 185, 94, 0.4);
 }
-.page-body-wording {
-  text-align: center;
-  padding: 200rpx 100rpx;
-}
-.page-body-info {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #fff;
-  width: 100%;
-  padding: 50rpx 0 150rpx 0;
-}
-.page-body-title {
-  margin-bottom: 100rpx;
+
+.nav-title {
   font-size: 32rpx;
-}
-.page-body-text {
-  font-size: 30rpx;
-  line-height: 26px;
-  color: #ccc;
-}
-.page-body-text-small {
-  font-size: 24rpx;
-  color: #000;
-  margin-bottom: 100rpx;
+  font-weight: 300;
 }
 
-.page-foot{
-  margin: 100rpx 0 30rpx 0;
-  text-align: center;
-  color: #1aad19;
-  font-size: 0;
-}
-.icon-foot{
-  width: 152rpx;
-  height: 23rpx;
+.nav-title::first-letter {
+  font-size: 40rpx;
+  margin-right: 4rpx;
 }
 
-.page-section{
-  width: 100%;
-  margin-bottom: 60rpx;
-}
-.page-section_center{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.page-section:last-child{
-  margin-bottom: 0;
-}
-.page-section-gap{
-  box-sizing: border-box;
-  padding: 0 30rpx;
-}
-.page-section-spacing{
-  box-sizing: border-box;
-  padding: 0 80rpx;
-}
-.page-section-title{
+.nav-name {
   font-size: 28rpx;
-  color: #999999;
-  margin-bottom: 10rpx;
-  padding-left: 30rpx;
-  padding-right: 30rpx;
-}
-.page-section-gap .page-section-title{
-  padding-left: 0;
-  padding-right: 0;
-}
-.page-section-ctn{
-
-}
-
-/* widget */
-.btn-area{
-  margin-top: 60rpx;
-  box-sizing: border-box;
-  width: 100%;
-  padding: 0 30rpx;
-}
-
-.image-plus {
-  width: 150rpx;
-  height: 150rpx;
-  border: 2rpx solid #D9D9D9;
+  text-transform: Capitalize;
+  margin-top: 20rpx;
   position: relative;
 }
-.image-plus-nb{
-  border: 0;
-}
-.image-plus-text{
-  color: #888888;
-  font-size: 28rpx;
-}
-.image-plus-horizontal {
+
+.nav-name::before {
+  content: "";
   position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: #d9d9d9;
-  width: 4rpx;
-  height: 80rpx;
-  transform: translate(-50%, -50%);
-}
-.image-plus-vertical {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  background-color: #d9d9d9;
-  width: 80rpx;
-  height: 4rpx;
-  transform: translate(-50%, -50%);
+  display: block;
+  width: 40rpx;
+  height: 6rpx;
+  background: #fff;
+  bottom: 0;
+  right: 0;
+  opacity: 0.5;
 }
 
-.demo-text-1{
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  background-color: #1AAD19;
-  color: #FFFFFF;
+.nav-name::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100rpx;
+  height: 1px;
+  background: #fff;
+  bottom: 0;
+  right: 40rpx;
+  opacity: 0.3;
+}
+
+.nav-name::first-letter {
+  font-weight: bold;
   font-size: 36rpx;
+  margin-right: 1px;
 }
-.demo-text-1:before{
-  content: 'A';
+
+.nav-li text {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  right: 30rpx;
+  top: 30rpx;
+  font-size: 52rpx;
+  width: 60rpx;
+  height: 60rpx;
+  text-align: center;
+  line-height: 60rpx;
 }
-.demo-text-2{
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  background-color: #2782D7;
-  color: #FFFFFF;
-  font-size: 36rpx;
-}
-.demo-text-2:before{
-  content: 'B';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.demo-text-3{
-  position: relative;
-  align-items: center;
-  justify-content: center;
-  background-color: #F1F1F1;
-  color: #353535;
-  font-size: 36rpx;
-}
-.demo-text-3:before{
-  content: 'C';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+.text-light {
+  font-weight: 300;
 }
