--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,13 +1,31 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
+<!--miniprogram/pages/index/index.wxml-->
+<home wx:if="{{pageCur=='home'}}"></home>
+<publish wx:if="{{pageCur=='publish'}}"></publish>
+<about wx:if="{{pageCur=='my'}}"></about>
+<view class="cu-bar tabbar bg-white shadow foot">
+  <view
+    class="{{pageCur=='home'?'action text-blue':'action text-gray'}}" 
+    bindtap="navChange"
+    data-cur="home"
+  >
+    <view class="cuIcon-homefill"></view> 首页
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view
+    class="action text-gray add-action"
+    bindtap="navChange"
+    data-cur="publish"
+  >
+    <button class="cu-btn cuIcon-add bg-blue shadow"></button>
+    发布
+  </view>
+  <view
+    class="{{pageCur=='my'?'action text-blue':'action text-gray'}}"
+    bindtap="navChange"
+    data-cur="my"
+  >
+    <view class="cuIcon-my">
+      <view class="cu-tag badge"></view>
+    </view>
+    我的
   </view>
 </view>
