--- a/miniprogram/pages/list/list.wxml
+++ b/miniprogram/pages/list/list.wxml
@@ -11,26 +11,26 @@
     <view class="desc">{{info.desc}}</view>
   </view>
 
-  <view class="cu-card case">
+  <view class="cu-card case" wx:for="{{list}}" wx:key>
     <view class="cu-item shadow">
-      <view class="image">
-        <image src="https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg" mode="widthFix"></image>
-        <view class="cu-tag bg-blue">史诗</view>
+      <view class="image" bindtap="enterPlayPage" data-item="{{item}}">
+        <image src="{{item.image}}" mode="widthFix"></image>
+        <view class="cu-tag bg-blue">{{item.tag}}</view>
         <view class="cu-bar bg-shadeBottom">
-          <text class="text-cut">我已天理为凭，踏入这片荒芜，不再受凡人的枷锁遏制。我已天理为凭，踏入这片荒芜，不再受凡人的枷锁遏制。</text>
+          <text class="text-cut">{{item.desc}}</text>
         </view>
       </view>
       <view class="cu-list menu-avatar">
         <view class="cu-item">
-          <view class="cu-avatar round lg" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg);"></view>
+          <view class="cu-avatar round lg" style="background-image:url({{item.avatar}});"></view>
           <view class="content flex-sub">
-            <view class="text-grey">正义天使 凯尔</view>
+            <view class="text-grey">{{item.title}}</view>
             <view class="text-gray text-sm flex justify-between">
-              十天前
+              {{item.date}}
               <view class="text-gray text-sm">
-                <text class="cuIcon-attentionfill margin-lr-xs"></text> 10
-                <text class="cuIcon-appreciatefill margin-lr-xs"></text> 20
-                <text class="cuIcon-messagefill margin-lr-xs"></text> 30
+                <text class="cuIcon-attentionfill margin-lr-xs"></text> {{item.attention}}
+                <text class="cuIcon-appreciatefill margin-lr-xs"></text> {{item.appreciate}}
+                <text class="cuIcon-messagefill margin-lr-xs"></text> {{item.message}}
               </view>
             </view>
           </view>
@@ -40,4 +40,3 @@
   </view>
 
 </scroll-view>
-
