--- a/miniprogram/pages/publish/index.wxml
+++ b/miniprogram/pages/publish/index.wxml
@@ -1,2 +1,12 @@
-<!--miniprogram/pages/publish/index.wxml-->
-<text>miniprogram/pages/publish/index.wxml</text>
+<view class="cu-list menu shadow-lg radius">
+  <view class="cu-item">
+    <navigator class="content" url="/pages/about/log/log" hover-class="none">
+      <text class="text-grey">发布主题</text>
+    </navigator>
+  </view>
+  <view class="cu-item">
+    <navigator class="content" hover-class="none">
+      <text class="text-grey">发布单视频</text>
+    </navigator>
+  </view>
+</view>
