--- a/miniprogram/pages/play/footer.wxml
+++ b/miniprogram/pages/play/footer.wxml
@@ -1,12 +1,15 @@
 <view class='cu-tabbar-height'></view>
 <view class="cu-bar tabbar bg-white foot">
-  <view class="bar-item text-gray">
-    <text class="{{info.isLike?'cuIcon-likefill':'cuIcon-like'}}"></text> 喜欢 * 690
-  </view>
-  <view class="bar-item text-gray">
-    <text class="cuIcon-share"></text> 分享 * 306
-  </view>
-  <view class="bar-item text-gray">
-    <text class="cuIcon-comment"></text> 评论 * 9
-  </view>
+  <button class="cu-btn bar-item bg-white text-red">
+    <text class="{{info.isLike?'cuIcon-likefill':'cuIcon-like'}}"></text>
+    喜欢 * 690
+  </button>
+  <button class="cu-btn bar-item bg-white text-blue">
+    <text class="cuIcon-share"></text>
+    分享 * 306
+  </button>
+  <button class="cu-btn bar-item bg-white text-olive">
+    <text class="cuIcon-comment"></text>
+    评论 * 9
+  </button>
 </view>
