--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -11,6 +11,6 @@
 
 <navigator class="cuIcon-search cu-btn round bg-white search-btn" style="top:{{CustomBar}}px"></navigator>
 
-<category wx:if="{{TabCur==0}}"></category>
+<category id="category" wx:if="{{TabCur==0}}"></category>
 <share wx:if="{{TabCur==1}}"></share>
 <community wx:if="{{TabCur==2}}"></community>
