--- a/miniprogram/pages/home/category/category.wxml
+++ b/miniprogram/pages/home/category/category.wxml
@@ -3,7 +3,7 @@
 
   <view class='nav-list'>
     <view class="nav-li" wx:for="{{list}}" wx:key>
-      <image class="icon" mode="aspectFill" src="{{item.icon}}" bindtap="enterList" data-info="{{item}}"></image>
+      <image class="icon" mode="aspectFill" src="{{item.iconUrl}}" bindtap="enterList" data-info="{{item}}"></image>
       <view class="title"># {{item.title}}</view>
     </view>
     <view class="nav-add-li">
