--- a/miniprogram/pages/about/menus.wxml
+++ b/miniprogram/pages/about/menus.wxml
@@ -1,18 +1,18 @@
 <view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg radius">
   <view class="cu-item arrow">
-    <navigator class="content" url="/pages/about/log/log" hover-class="none">
+    <navigator class="content" url="/pages/empty/empty?title=我的信息" hover-class="none">
       <text class="cuIcon-formfill text-green"></text>
       <text class="text-grey">我的信息</text>
     </navigator>
   </view>
   <view class="cu-item arrow">
-    <navigator class="content" hover-class="none">
+    <navigator class="content" url="/pages/empty/empty?title=我的喜欢" hover-class="none">
       <text class="cuIcon-appreciatefill text-red"></text>
       <text class="text-grey">我的喜欢</text>
     </navigator>
   </view>
   <view class="cu-item arrow">
-    <navigator class="content" hover-class="none">
+    <navigator class="content" url="/pages/empty/empty?title=我的关注" hover-class="none">
       <text class="cuIcon-writefill text-cyan"></text>
       <text class="text-grey">我的关注</text>
     </navigator>
