--- a/miniprogram/pages/play/play.wxml
+++ b/miniprogram/pages/play/play.wxml
@@ -1,39 +1,41 @@
 <!--miniprogram/pages/play/play.wxml-->
-<cu-custom bgColor="bg-white" isBack="{{true}}">
-  <view slot="backText">返回</view>
-  <view slot="content">{{info.title}}</view>
-</cu-custom>
+<view style="background-image:{{color}}">
+  <cu-custom bgColor="bg-transparent" isBack="{{true}}">
+    <view slot="backText">返回</view>
+    <view slot="content">{{info.title}}</view>
+  </cu-custom>
 
-<scroll-view scroll-y class="scrollPage">
+  <scroll-view scroll-y class="scrollPage">
 
-  <view class="cu-card dynamic no-card">
-    <view class="cu-item shadow" wx:for="{{info.items}}" wx:key="{{item.id}}">
-      <view class="container-head">
-        <view class="player tc">
-          <video id="myVideo-{{item.id}}" src="{{item.videoUrl}}" controls style="width:100%;height:464rpx;" poster="{{item.image}}" bindplay="onPlay" data-index="{{index}}"></video>
-          <view wx:if="{{!item.played}}" class="cover" style="background-image: url('{{item.imageUrl}}');"></view>
-          <view wx:if="{{!item.played}}" class="play-button" bindtap="play" data-index="{{index}}">
-            <image style="width: 100rpx; height: 100rpx;" src="/images/icon_play.png" mode="scaleToFill"></image>
-          </view>
-        </view>
-      </view>
-      <view class="cu-list menu-avatar">
-        <view class="cu-item">
-          <view class="padding flex-sub">
-            <view class="text-xl">{{item.title}}</view>
-            <view class="text-gray text-sm flex justify-between">
-              {{item.createdTime}}
+    <view class="cu-card dynamic no-card">
+      <view class="cu-item shadow" wx:for="{{info.items}}" wx:key="{{item.id}}" style="background-color: transparent;">
+        <view class="container-head">
+          <view class="player tc">
+            <video id="myVideo-{{item.id}}" src="{{item.videoUrl}}" controls style="width:100%;height:464rpx;" poster="{{item.image}}" bindplay="onPlay" data-index="{{index}}"></video>
+            <view wx:if="{{!item.played}}" class="cover" style="background-image: url('{{item.imageUrl}}');"></view>
+            <view wx:if="{{!item.played}}" class="play-button" bindtap="play" data-index="{{index}}">
+              <image style="width: 100rpx; height: 100rpx;" src="/images/icon_play.png" mode="scaleToFill"></image>
             </view>
           </view>
         </view>
-      </view>
-      <view class="text-content">
-        {{item.desc}}
+        <view class="cu-list menu-avatar">
+          <view class="cu-item" style="background-color: transparent;">
+            <view class="padding flex-sub">
+              <view class="text-xl">{{item.title}}</view>
+              <view class="text-gray text-sm flex justify-between">
+                {{item.createdTime}}
+              </view>
+            </view>
+          </view>
+        </view>
+        <view class="text-content">
+          {{item.desc}}
+        </view>
       </view>
     </view>
-  </view>
 
-  <include src="comments.wxml"/>
+    <include src="comments.wxml"/>
 
-  <include src="footer.wxml"/>
-</scroll-view>
+    <include src="footer.wxml"/>
+  </scroll-view>
+</view>
