--- a/miniprogram/pages/empty/empty.wxml
+++ b/miniprogram/pages/empty/empty.wxml
@@ -1,9 +1,10 @@
 <!--miniprogram/pages/empty/empty.wxml-->
+<view class="fullscreen">
 <cu-custom bgColor="bg-gradual-blue" isBack="{{true}}">
   <view slot="backText">返回</view>
   <view slot="content">{{title}}</view>
 </cu-custom>
 
-<image class="fullscreen" mode="aspectFill" src="{{emptyUrl}}">
-</image>
+  <view class="centre"><image mode="aspectFit" src="{{emptyUrl}}"></image></view>
 
+</view>
